--- a/style.css
+++ b/style.css
@@ -1,82 +1,141 @@
-/*
-margin: 0;
-padding: 0;
-
- */
-body{
-    background: whitesmoke;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
+/*margin: 0;
+paddinng:0;
+*/
+body .hero-image {
+    background-image: ("./images/picturee.jpg");
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
-header{
+/* Place text in the middle of the image */
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+
+.icon-bar {
+    background-image: url(./images/image3.jpg);
+    background-repeat: repeat-x;
     position: fixed;
-    top: 0%; left: 0;
-    z-index: 1000%;
-    height: 100%;
-    width: 25rem;
-    background-color: navajowhite;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-flow: column;
+    margin-bottom: 25px;
+    width: 100%;
+    padding-left: 10px;
+}
+
+.icon-bar {
+    width: 10px;
+    /* Set a specific width */
+    background-color: #555;
+    /* Dark-grey background */
+    ;
+    position: fixed;
+    margin-left: 10px;
+}
+
+.icon-bar a {
+    display: block;
+    /* Make the links appear below each other instead of side-by-side */
+    text-align: center;
+    /* Center-align text */
+    padding: 25px;
+    /* Add some padding */
+    transition: all 0.3s ease;
+    /* Add transition for hover effects */
+    color: white;
+    /* White text color */
+    font-size: 36px;
+    /* Increased font-size */
+    width: fit-content;
+}
+
+.icon-bar a:hover {
+    background-color: #000;
+    /* Add a hover color */
+}
+
+.active {
+    background-color: #04AA6D;
+    /* Add an active/current color */
+}
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active,
+.accordion:hover {
+    background-color: #ccc;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    display: none;
+    overflow: hidden;
+}
+
+/* Style the tab buttons */
+.tablink {
+    background-color: #555;
+    color: white;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    font-size: 17px;
+    width: 25%;
+}
+
+/* Change background color of buttons on hover */
+.tablink:hover {
+    background-color: #777;
+}
+
+/* Set default styles for tab content */
+.tabcontent {
+    color: white;
+    display: none;
+    padding: 50px;
     text-align: center;
 }
 
-header .user img{
-    height: 17rem;
-    width: 17rem;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 1rem;
-    border: .7rem solid var(--pink);
+/* Style each tab content individually */
+#About-me {
+    background-color: red;
 }
 
-header .user .name{
-    font-size: 3.rem;
-    color: tomato;
+#Services {
+    background-color: green;
 }
 
-header .user .post{
-    font-size: 1rem;
-    color: slateblue;
+#Contact {
+    background-color: blue;
 }
 
-header .nav-bar{
-    width: 100%;
+#Skills {
+    background-color: orange;
 }
 
-header .nav-bar ul{
-    list-style: none;
-    padding: 1rem 3rem;
+#Emails {
+    background-color: aqua;
 }
-
-header .nav-bar ul li a{
-    display: block;
-    text-decoration: none;
-    padding: 1rem;
-    margin: 1rem 0;
-    background: #ccc;
-    color: #333;
-    font-size: px;
-    width: 10rem ;
-    border-radius: 5rem;
-}
-
-header .nav-bar ul li a:hover{
-    background:var(--pink);
-}
-
-#menu{
-    position: fixed;
-    top: 2rem; right:2rem;
-    background: #333;
-    color: #111;
-    cursor: pointer;
-    font-size: 2.5rem;
-    padding: 1rem;
-    z-index: 1000;
-    display: none;
-}
-
-
