--- a/style.css
+++ b/style.css
@@ -1,141 +1,227 @@
-/*margin: 0;
-paddinng:0;
-*/
-body .hero-image {
-    background-image: ("./images/picturee.jpg");
-    height: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+:root{
+    --yellow:#f9ca24;
 }
 
-/* Place text in the middle of the image */
-.hero-text {
+*{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    outline: none; border: none;
+    text-transform: capitalize;
+    transition: all .2s linear;
+}
+
+*::selection{
+    background: var(--yellow);
+    color: #333;
+}
+
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+}
+
+html ::-webkit-scrollbar{
+    width: 1.4rem;
+}
+
+html ::-webkit-scrollbar-track{
+    background: #222;
+}
+
+html ::-webkit-scrollbar-thumb{
+    background: var(--yellow);
+}
+
+body{
+    background: #222;
+    overflow-x: hidden;
+    padding-left: 35rem;
+}
+
+section{
+    min-height: 100vh;
+    padding: 1rem;
+}
+
+.btn-a{
+    padding: 7rem 3rem;
+    background: #333;
+    color: #fff;
+    cursor: pointer;
+    margin-top: 1rem;
+    font-size: .6rem;
+    border-radius: 5rem;
+}
+
+.btn-a i{
+    padding:0 ;
+    font-size: 24px;
+    border-radius:5rem ;
+}
+
+.btn i{
+    padding: 7rem 3rem;
+    border-radius: 5rem;
+    background: #eee;
+    cursor: pointer;
+    font-size: 6rem;
+    margin: 1rem;
+}
+
+
+.btn-a a:hover{
+    background: var(--yellow);
+}
+
+.heading{
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 0 6rem;
+    font-size: 4rem;
+    padding: 1rem;
+    border-bottom: .1rem solid #fff4;
     color: white;
+
 }
 
+.heading span{
+    color: var(--yellow);
+}
 
-.icon-bar {
-    background-image: url(./images/image3.jpg);
-    background-repeat: repeat-x;
+header{
     position: fixed;
-    margin-bottom: 25px;
+    top: 0; left: 0;
+    z-index: 1000;
+    height: 100%;
+    width: 35rem;
+    background: #1a1a1a;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    flex-flow: column;
+    text-align: center;
+}
+
+header .user img{
+    height: 17rem;
+    width: 17rem;
+    border-radius:50%;
+    object-fit: cover;
+    margin-bottom: 1rem;
+    border: .7rem solid var(--yellow);
+}
+
+header .user .name{
+    font-size: 3.5rem;
+    color: #fff;
+}
+
+header .user .post{
+    font-size: 2rem;
+    color: #eee;
+}
+header .navbar{
     width: 100%;
-    padding-left: 10px;
 }
 
-.icon-bar {
-    width: 10px;
-    /* Set a specific width */
-    background-color: #555;
-    /* Dark-grey background */
-    ;
-    position: fixed;
-    margin-left: 10px;
+header .navbar ul{
+    list-style: none;
+    padding: 1rem 3rem;
 }
 
-.icon-bar a {
+header .navbar ul li{
     display: block;
-    /* Make the links appear below each other instead of side-by-side */
-    text-align: center;
-    /* Center-align text */
-    padding: 25px;
-    /* Add some padding */
-    transition: all 0.3s ease;
-    /* Add transition for hover effects */
-    color: white;
-    /* White text color */
-    font-size: 36px;
-    /* Increased font-size */
-    width: fit-content;
+    padding: 1rem;
+    margin: 1.5rem 0;
+    background: #3333;
+    color: #fff;
+    font-size: 2rem;
+    border-radius: 5rem;
 }
 
-.icon-bar a:hover {
-    background-color: #000;
-    /* Add a hover color */
+header .navbar ul li a:hover{
+    background: var(--yellow);
 }
 
-.active {
-    background-color: #04AA6D;
-    /* Add an active/current color */
-}
-
-/* Style the buttons that are used to open and close the accordion panel */
-.accordion {
-    background-color: #eee;
-    color: #444;
+#menu{
+    position: fixed;
+    top: 2rem; right: 2rem;
+    background: #333;
+    color: #fff;
     cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-}
-
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active,
-.accordion:hover {
-    background-color: #ccc;
-}
-
-/* Style the accordion panel. Note: hidden by default */
-.panel {
-    padding: 0 18px;
-    background-color: white;
+    font-size: 2.5rem;
+    padding: 1rem 1.5rem;
+    z-index: 1000;
     display: none;
-    overflow: hidden;
 }
 
-/* Style the tab buttons */
-.tablink {
-    background-color: #555;
-    color: white;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    font-size: 17px;
-    width: 25%;
+
+.home{
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+    padding: 0 15rem;
 }
 
-/* Change background color of buttons on hover */
-.tablink:hover {
-    background-color: #777;
+.home h3{
+    font-size: 2.5rem;
+    color: #fff;
 }
 
-/* Set default styles for tab content */
-.tabcontent {
-    color: white;
-    display: none;
-    padding: 50px;
+.home h1{
+    font-size: 5rem;
+    color: #fff;
+}
+
+.home h1 span{
+    background: var(--yellow)
+}
+
+.home p{
+    font-size: 2rem;
+    color: #eee;
+    padding: 2rem;
+}
+
+.about .row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: none;
+    padding: 1rem 0;
+}
+
+.about .row .info{
+    flex: 1 1 48rem;
+    padding: 2rem 1rem;
+    padding-left: 6rem;
+}
+
+.about .row .info h3{
+    font-size: 2rem;
+    color: var(--yellow);
+    padding: 1rem 0;
+    font-weight: normal;
+}
+
+.about .row .info h3 span{
+    color: #eee;
+    padding: 0 .5rem;
+
+}
+
+.about .row .counter{
+    flex: 1  48rem;
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    
+}
+.about .row .counter .box{
+    width: 20rem;
+    background: #fff;
     text-align: center;
-}
-
-/* Style each tab content individually */
-#About-me {
-    background-color: red;
-}
-
-#Services {
-    background-color: green;
-}
-
-#Contact {
-    background-color: blue;
-}
-
-#Skills {
-    background-color: orange;
-}
-
-#Emails {
-    background-color: aqua;
+    padding: 2rem;
+    margin: 2rem;
 }
