--- a/style.css
+++ b/style.css
@@ -1,51 +1,52 @@
-:root{
-    --yellow:#f9ca24;
+:root {
+    --yellow: #f9ca24;
 }
 
-*{
+* {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     box-sizing: border-box;
     text-decoration: none;
-    outline: none; border: none;
+    outline: none;
+    border: none;
     text-transform: capitalize;
     transition: all .2s linear;
 }
 
-*::selection{
+*::selection {
     background: var(--yellow);
     color: #333;
 }
 
-html{
+html {
     font-size: 62.5%;
     overflow-x: hidden;
 }
 
-html ::-webkit-scrollbar{
+html ::-webkit-scrollbar {
     width: 1.4rem;
 }
 
-html ::-webkit-scrollbar-track{
+html ::-webkit-scrollbar-track {
     background: #222;
 }
 
-html ::-webkit-scrollbar-thumb{
+html ::-webkit-scrollbar-thumb {
     background: var(--yellow);
 }
 
-body{
+body {
     background: #222;
     overflow-x: hidden;
     padding-left: 35rem;
 }
 
-section{
+section {
     min-height: 100vh;
     padding: 1rem;
 }
 
-.btn-a{
+.btn-a {
     padding: 7rem 3rem;
     background: #333;
     color: #fff;
@@ -55,27 +56,31 @@ section{
     border-radius: 5rem;
 }
 
-.btn-a i{
-    padding:0 ;
-    font-size: 24px;
-    border-radius:5rem ;
+.btn-a {
+    padding: 0;
+    border-radius: 5rem;
+    color: #f9ca24;
+    width: 5rem;
+    margin-top: 1rem;
+    
+
 }
 
-.btn i{
-    padding: 7rem 3rem;
+.btn i {
+    padding: 0;
     border-radius: 5rem;
     background: #eee;
     cursor: pointer;
     font-size: 6rem;
-    margin: 1rem;
+
 }
 
 
-.btn-a a:hover{
+.btn-a a:hover {
     background: var(--yellow);
 }
 
-.heading{
+.heading {
     text-align: center;
     margin: 0 6rem;
     font-size: 4rem;
@@ -85,13 +90,14 @@ section{
 
 }
 
-.heading span{
+.heading span {
     color: var(--yellow);
 }
 
-header{
+header {
     position: fixed;
-    top: 0; left: 0;
+    top: 0;
+    left: 0;
     z-index: 1000;
     height: 100%;
     width: 35rem;
@@ -103,34 +109,35 @@ header{
     text-align: center;
 }
 
-header .user img{
+header .user img {
     height: 17rem;
     width: 17rem;
-    border-radius:50%;
+    border-radius: 50%;
     object-fit: cover;
     margin-bottom: 1rem;
     border: .7rem solid var(--yellow);
 }
 
-header .user .name{
+header .user .name {
     font-size: 3.5rem;
     color: #fff;
 }
 
-header .user .post{
+header .user .post {
     font-size: 2rem;
     color: #eee;
 }
-header .navbar{
+
+header .navbar {
     width: 100%;
 }
 
-header .navbar ul{
+header .navbar ul {
     list-style: none;
     padding: 1rem 3rem;
 }
 
-header .navbar ul li{
+header .navbar ul li {
     display: block;
     padding: 1rem;
     margin: 1.5rem 0;
@@ -140,13 +147,14 @@ header .navbar ul li{
     border-radius: 5rem;
 }
 
-header .navbar ul li a:hover{
+header .navbar ul li a:hover {
     background: var(--yellow);
 }
 
-#menu{
+#menu {
     position: fixed;
-    top: 2rem; right: 2rem;
+    top: 2rem;
+    right: 2rem;
     background: #333;
     color: #fff;
     cursor: pointer;
@@ -157,34 +165,36 @@ header .navbar ul li a:hover{
 }
 
 
-.home{
+.home {
     display: flex;
     justify-content: center;
     flex-flow: column;
     padding: 0 15rem;
 }
 
-.home h3{
+.home h3 {
     font-size: 2.5rem;
     color: #fff;
 }
 
-.home h1{
+.home h1 {
     font-size: 5rem;
     color: #fff;
 }
 
-.home h1 span{
-    background: var(--yellow)
+.home h1 span {
+    background: var(--yellow);
+    
+    
 }
 
-.home p{
+.home p {
     font-size: 2rem;
     color: #eee;
     padding: 2rem;
 }
 
-.about .row{
+.about .row {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -192,36 +202,149 @@ header .navbar ul li a:hover{
     padding: 1rem 0;
 }
 
-.about .row .info{
+.about .row .info {
     flex: 1 1 48rem;
     padding: 2rem 1rem;
     padding-left: 6rem;
 }
 
-.about .row .info h3{
+.about .row .info h3 {
     font-size: 2rem;
     color: var(--yellow);
     padding: 1rem 0;
     font-weight: normal;
 }
 
-.about .row .info h3 span{
+.about .row .info h3 span {
     color: #eee;
     padding: 0 .5rem;
 
 }
 
-.about .row .counter{
-    flex: 1  48rem;
+.about .row .counter {
+    flex: 1 48rem;
     display: flex;
     justify-content: center;
     flex-wrap: nowrap;
-    
+
 }
-.about .row .counter .box{
+
+.about .row .counter .box {
     width: 20rem;
-    background: #fff;
+    background:#222;
     text-align: center;
     padding: 2rem;
     margin: 2rem;
 }
+
+.about .row .counter .box span{
+    font-size: 4rem;
+    color: var(--yellow);
+}
+
+
+.education .box-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    padding: 1rem 0;
+    padding-left: 3rem;
+}
+
+.education .box-container .box{
+    width: 27rem;
+    margin: 4rem 1rem;
+    padding-left: 4rem;
+    border-left: .2rem solid #fff; 
+    position: relative;
+}
+
+.education .box-container .box span{
+     font-size: 1.3rem;
+     background: #222;
+     color: #fff;
+     border-radius: 5rem;
+     padding: .5rem 2.5rem;
+}
+
+.education .box-container .box h3{
+    font-size:  2rem;
+    color: #fff;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.education .box-container .box p{
+    font-size: 1.4rem;
+    color: var(--yellow);
+    padding: 1rem 0;
+}
+
+.education .box-container .box i{
+    position: absolute;
+    top: -5rem; left:-2.5rem;
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    line-height: 5rem;
+    text-align: center;
+    font-size: 2rem;
+    color: #fff;
+    background: var(--yellow);
+}
+
+.portfolio .box-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    padding: 2rem 0;
+}
+
+.portfolio .box-container .box{
+    height: 20rem;
+    width: 26rem;
+    border-radius: 1rem;
+    margin: 2rem;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.portfolio .box-container .box img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.portfolio .box-container .box:hover img{
+    transform: scale(1.2);
+}
+
+.contact .row .content-info{
+    display: flexbox;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+}
+.contact .icons .row .box .counter{
+    padding: 2rem;
+    display: fixed;
+    justify-content: space-between;
+    border-radius: 50%;
+
+}
+
+.contact .row .counter .box .btn{
+    color: #fff;
+    align-items: center;
+    justify-content: space-between;
+    margin: 50%;
+    padding: 2.5rem;
+}
+
+  
+
+
+
+
