--- a/style.css
+++ b/style.css
@@ -341,147 +341,79 @@ header .navbar ul li a{
     transform: scale(1.2);
 }
 
-.carousel {
-    margin-left: 15%;
-    margin-right: 15%;
+#testimonials p{
+    font-size: 2rem;
 }
 
-ul.slides {
-    display: block;
-    position: relative;
-    height: 600px;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    list-style: none;
+#testimonials i{
+    color: #f9ca24;
 }
 
-.slides * {
-    user-select: none;
-    -ms-user-select: none;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -webkit-touch-callout: none;
+#testimonials .controls-push-right a{
+    align-items: center;
 }
 
-ul.slides input {
-    display: none; 
+#testimonials h4{
+    color: #f9ca24;
+}
+
+#testimonials img{
+    height: 17rem;
+    width: 17rem;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 1rem;
+    border: .7rem solid var(--yellow);
+}
+.form-group{
+    display: flex;
+    height: fit-content;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    text-transform: lowercase !important;
 }
 
 
-.slide-container { 
-    display: block; 
-}
 
-.slide-image {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    opacity: 0;
-    transition: all .7s ease-in-out;
-}   
-
-.slide-image img {
-    width: auto;
-    min-width: 100%;
-    height: 100%;
-}
-
-.carousel-controls {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 999;
-    font-size: 100px;
-    line-height: 600px;
-    color: #fff;
-}
-
-.carousel-controls label {
-    display: none;
-    position: absolute;
-    padding: 0 20px;
-    opacity: 0;
-    transition: opacity .2s;
-    cursor: pointer;
-}
-
-.slide-image:hover + .carousel-controls label{
-    opacity: 0.5;
-}
-
-.carousel-controls label:hover {
-    opacity: 1;
-}
-
-.carousel-controls .prev-slide {
-    width: 49%;
-    text-align: left;
-    left: 0;
-}
-
-.carousel-controls .next-slide {
-    width: 49%;
-    text-align: right;
-    right: 0;
-}
-
-.carousel-dots {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 20px;
-    z-index: 999;
+.form-group label{
+    color: #f9ca24;
+    font-size: 2rem;
     text-align: center;
 }
 
-.carousel-dots .carousel-dot {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: #fff;
-    opacity: 0.5;
-    margin: 10px;
+.form-group .box-container{
+    margin: 0rem;
+    padding:10rem;
+    height: 50%;
+    width:50% ;
+    position: relative;
+    color: #f9ca24;
+    box-sizing: border-box;
+    outline: none;
+    background: #1a1a1a;
+    
 }
 
-input:checked + .slide-container .slide-image {
-    opacity: 1;
-    transform: scale(1);
-    transition: opacity 1s ease-in-out;
+.content h3{
+    color: #eee;
+    text-decoration: underline;
+    margin-top: 2rem;
 }
 
-input:checked + .slide-container .carousel-controls label {
-     display: block; 
+.form-group .button{
+    color:#eee;
+    padding-top : 1rem;
+    
 }
 
-input#img-1:checked ~ .carousel-dots label#img-dot-1,
-input#img-2:checked ~ .carousel-dots label#img-dot-2,
-input#img-3:checked ~ .carousel-dots label#img-dot-3,
-input#img-4:checked ~ .carousel-dots label#img-dot-4,
-input#img-5:checked ~ .carousel-dots label#img-dot-5,
-input#img-6:checked ~ .carousel-dots label#img-dot-6 {
-	opacity: 1;
-}
+.content-f{
 
-
-input:checked + .slide-container .nav label { display: block; }
-
-form{
-    margin-left: 400px;
-}
-
-#contact{
-width: 1005px;
-height: 100vh;
-
-
+height: 25rem;
 
 }
+
+
 
 
 
