--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ header {
     justify-items: center;
     flex-flow: column;
     text-align: center;
+    padding-top: 5rem;
 }
 
 header .user img {
@@ -142,32 +143,79 @@ header .navbar ul li {
     
     padding: 1rem;
     margin: 1.5rem 0;
-    background: #3333;
+    background: #f9ca24;
     color: #eee;
     font-size: 2rem;
     border-radius: 5rem;
 }
 
-header .navbar ul li a:hover {
-    background: var(--yellow);
+header .navbar ul :hover {
+    background: #1a1a1a;
 }
 
 header .navbar ul li a{
     text-decoration: none;
     color: #eee;
 }
-#menu {
-    position: fixed;
-    top: 2rem;
-    right: 2rem;
-    background: #333;
-    color: #fff;
-    cursor: pointer;
-    font-size: 2.5rem;
-    padding: 1rem 1.5rem;
-    z-index: 1000;
+
+.nav {
+    text-align: right;
+    height: 70px;
+    line-height: 70px;
+  }
+
+.menu {
+    margin: 0 30px 0 0;
+  }
+  
+  .menu a {
+    clear: right;
+    text-decoration: none;
+    color: whitesmoke;
+    margin: 0 10px;
+    line-height: 70px;
+    
+  }
+  
+  span {
+    color: var(--white);
+  }
+  
+  label{
+    margin: 0 40px 0 0;
+    font-size: 26px;
+    line-height: 70px;
     display: none;
-}
+    width: 26px;
+    float: right;
+    color: rgb(238, 70, 154);
+  }
+  
+  #toggle {
+    display: none;
+  }
+  
+  @media only screen and (max-width: 768px) {
+    label {
+      display: block;
+      cursor: pointer;
+    }
+    .menu {
+      text-align: center;
+      width: 100%;
+      display: none;
+    }
+    .menu a {
+      display: block;
+      border-bottom: 1px solid black;
+      margin: 0;
+      background-color: black;
+    }
+    #toggle:checked + .menu {
+      display: block;
+    }
+  
+  }
 
 
 .home {
@@ -175,6 +223,7 @@ header .navbar ul li a{
     justify-content: center;
     flex-flow: column;
     padding: 0 15rem;
+    min-height: 100vh !important;
 }
 
 .home h3 {
@@ -189,8 +238,6 @@ header .navbar ul li a{
 
 .home h1 span {
     background: var(--yellow);
-
-
 }
 
 .home p {
@@ -265,6 +312,7 @@ header .navbar ul li a{
 .education .box-container {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     flex-wrap: wrap;
     padding: 1rem 0;
     padding-left: 3rem;
@@ -272,10 +320,9 @@ header .navbar ul li a{
 
 .education .box-container .box {
     width: 27rem;
-    margin: 4rem 1rem;
-    justify-content: space-between;
-    padding-left: 4rem;
-    border-left: .2rem solid #fff;
+    margin: 5rem 1rem;
+    padding-left: 10rem;
+    border-left: .5rem solid #fff;
     position: relative;
 }
 
@@ -302,7 +349,7 @@ header .navbar ul li a{
 
 .education .box-container .box i {
     position: absolute;
-    top: -5rem;
+    top:-1.5rem; left: -2.5rem;
     left: -2.5rem;
     height: 5rem;
     width: 5rem;
@@ -323,10 +370,10 @@ header .navbar ul li a{
 }
 
 .projects .box-container .box {
-    height: 20rem;
+    height: 30rem;
     width: 26rem;
     border-radius: 1rem;
-    margin: 2rem;
+    margin: 6rem;
     overflow: hidden;
     cursor: pointer;
 }
@@ -335,6 +382,7 @@ header .navbar ul li a{
     height: 100%;
     width: 100%;
     object-fit: cover;
+    border: .7rem solid var(--yellow);
 }
 
 .projects .box-container .box:hover img {
@@ -371,6 +419,10 @@ header .navbar ul li a{
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.form-group input {
+    
     text-transform: lowercase !important;
 }
 
@@ -389,10 +441,9 @@ header .navbar ul li a{
     width:50% ;
     position: relative;
     color: #f9ca24;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
     outline: none;
     background: #1a1a1a;
-    
 }
 
 .content h3{
@@ -411,6 +462,170 @@ header .navbar ul li a{
 
 height: 25rem;
 
+}
+
+.site-footer
+{
+  background-color:#26272b;
+  padding:45px 0 20px;
+  font-size:15px;
+  line-height:24px;
+  color:#737373;
+}
+.site-footer hr
+{
+  border-top-color:#bbb;
+  opacity:0.5
+}
+.site-footer hr.small
+{
+  margin:20px 0
+}
+.site-footer h6
+{
+  color:#fff;
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
+}
+.site-footer a
+{
+  color:#737373;
+}
+.site-footer a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links
+{
+  padding-left:0;
+  list-style:none
+}
+.footer-links li
+{
+  display:block
+}
+.footer-links a
+{
+  color:#737373
+}
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links.inline li
+{
+  display:inline-block
+}
+.site-footer .social-icons
+{
+  text-align:right
+}
+.site-footer .social-icons a
+{
+  width:40px;
+  height:40px;
+  line-height:40px;
+  margin-left:6px;
+  margin-right:0;
+  border-radius:100%;
+  background-color:#33353d
+}
+.copyright-text
+{
+  margin:0
+}
+@media (max-width:991px)
+{
+  .site-footer [class^=col-]
+  {
+    margin-bottom:30px
+  }
+}
+@media (max-width:767px)
+{
+  .site-footer
+  {
+    padding-bottom:0
+  }
+  .site-footer .copyright-text,.site-footer .social-icons
+  {
+    text-align:center
+  }
+}
+.social-icons
+{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none
+}
+.social-icons li
+{
+  display:inline-block;
+  margin-bottom:4px
+}
+.social-icons li.title
+{
+  margin-right:15px;
+  text-transform:uppercase;
+  color:#96a2b2;
+  font-weight:700;
+  font-size:13px
+}
+.social-icons a{
+  background-color:#eceeef;
+  color:#818a91;
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear
+}
+.social-icons a:active,.social-icons a:focus,.social-icons a:hover
+{
+  color:#fff;
+  background-color:#29aafe
+}
+.social-icons.size-sm a
+{
+  line-height:34px;
+  height:34px;
+  width:34px;
+  font-size:14px
+}
+.social-icons a.facebook:hover
+{
+  background-color:#3b5998
+}
+.social-icons a.twitter:hover
+{
+  background-color:#00aced
+}
+.social-icons a.linkedin:hover
+{
+  background-color:#007bb6
+}
+.social-icons a.dribbble:hover
+{
+  background-color:#ea4c89
+}
+@media (max-width:767px)
+{
+  .social-icons li.title
+  {
+    display:block;
+    margin-right:0;
+    font-weight:600
+  }
 }
 
 
