--- a/style.css
+++ b/style.css
@@ -133,14 +133,36 @@ header .navbar {
     width: 50%;
 }
 
+@media(max-width:1200px){
+  html{
+    font-size: 55%;
+  }
+}
+
+@media(max-width:991px){
+  header{
+    left: 120%;
+  }
+  menu{
+    display: block;
+  }
+}
+
+
+
+
+
+
+
+
+
 header .navbar ul {
     list-style: none;
     padding: 1rem 3rem;
 }
 
-header .navbar ul li {
+header .navbar ul li a{
     display: block;
-    
     padding: 1rem;
     margin: 1.5rem 0;
     background: #f9ca24;
@@ -162,10 +184,18 @@ header .navbar ul li a{
     text-align: right;
     height: 70px;
     line-height: 70px;
+    width: 50rem;
   }
 
 .menu {
-    margin: 0 30px 0 0;
+    position: fixed;
+    top:2rem; right:2rem;
+    background: #333;
+    cursor:pointer;
+    font-size: 2.5rem;
+    padding:1rem 1.5rem;
+    z-index:1000;
+    display: none;
   }
   
   .menu a {
@@ -193,6 +223,7 @@ header .navbar ul li a{
   
   #toggle {
     display: none;
+    
   }
   
   @media only screen and (max-width: 768px) {
