--- a/style.css
+++ b/style.css
@@ -146,6 +146,17 @@ header .navbar {
   menu{
     display: block;
   }
+
+  header .toggle{
+    left:0%;
+  }
+}
+
+@media(max-width:400px){
+  header{
+    width: 100vw;
+  }
+
 }
 
 
@@ -444,56 +455,190 @@ header .navbar ul li a{
     margin-bottom: 1rem;
     border: .7rem solid var(--yellow);
 }
-.form-group{
-    display: flex;
-    height: fit-content;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+* {
+  box-sizing: border-box;
 }
 
-.form-group input {
-    
-    text-transform: lowercase !important;
+body {
+  padding: 1rem;
+  color: #212d31;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.contain {
+  background-color:#f9ca24 ;
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1em;
+}
+
+div.form {
+  background-color: #eee;
+}
+.contact-wrapper {
+  margin: auto 0;
+}
+
+.submit-btn {
+  float: left;
+}
+.reset-btn {
+  float: right;
+}
+
+.form-headline:after {
+  content: "";
+  display: block;
+  width: 10%;
+  padding-top: 10px;
+  border-bottom: 3px solid #f9ca24;
+}
+
+.highlight-text {
+  color: #f9ca24;
+}
+
+.hightlight-contact-info {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.5;
+}
+
+.highlight-text-grey {
+  font-weight: 500;
+}
+
+.email-info {
+    margin-top: 20px;
+}
+
+::-webkit-input-placeholder { /* Chrome */
+  font-family: 'Roboto', sans-serif;
+}
+
+.required-input {
+  color: black;
+}
+@media (min-width: 600px) {
+  .contain {
+    padding: 0;
+  }
+}
+
+h3,
+ul {
+  margin: 0;
+}
+
+h3 {
+  margin-bottom: 1rem;
+}
+
+.form-input:focus,
+textarea:focus{
+  outline: 1.5px solid #f9ca24;
+}
+
+.form-input,
+textarea {
+  width: 100%;
+  border: 1px solid #bdbdbd;
+  border-radius: 5px;
+}
+
+.wrapper > * {
+  padding: 1em;
+}
+@media (min-width: 700px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+  .wrapper > * {
+    padding: 2em 2em;
+  }
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+.contacts {
+  color: #212d31;
+}
+
+.form {
+  background: #fff;
+}
+
+form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
+form label {
+  display: block;
+}
+form p {
+  margin: 0;
+}
+
+.full-width {
+  grid-column: 1 / 3;
+}
+
+button,
+.submit-btn,
+.form-input,
+textarea {
+  padding: 1em;
+}
+
+button, .submit-btn {
+  background: transparent;
+  border: 1px solid #f9ca24;
+  color: sa;
+  border-radius: 15px;
+  padding: 5px 20px;
+  text-transform: uppercase;
+}
+button:hover, .submit-btn:hover,
+button:focus , .submit-btn:focus{
+  background: #f9ca24;
+  outline: 0;
+  color: #eee;
+}
+.error {
+  color: #f9ca24;
+}
+ul i {
+  font-size: 1.5em;
+  color:white;
+  margin: 0 10px;
+  transition: 0.5s;
+  justify-content: space-evenly;
+  cursor: pointer;
+}
+ul i:hover {
+  transform: translateY(-10px);
 }
 
 
 
-.form-group label{
-    color: #f9ca24;
-    font-size: 2rem;
-    text-align: center;
-}
 
-.form-group .box-container{
-    margin: 0rem;
-    padding:10rem;
-    height: 50%;
-    width:50% ;
-    position: relative;
-    color: #f9ca24;
-    box-sizing: border-box !important;
-    outline: none;
-    background: #1a1a1a;
-}
 
-.content h3{
-    color: #eee;
-    text-decoration: underline;
-    margin-top: 2rem;
-}
 
-.form-group .button{
-    color:#eee;
-    padding-top : 1rem;
-    
-}
 
-.content-f{
 
-height: 25rem;
 
-}
+
+
+
+
+
+
 
 .site-footer
 {
